--- a/main.css
+++ b/main.css
@@ -7,7 +7,13 @@
   padding-top: 2em;
   text-align: center;
 }
+.nav-wrapper{
+  padding-left: 15px;
+}
 
-.title{
-  padding-left: 1em;
+#body{
+  height: 140px;
+}
+p{
+  word-wrap: break-word;
 }
